minor edits: 1. changing maraei to maraie 2. update location o=in contact us file

--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>El-Maraei Group - Leading Business Conglomerate | المرعي جروب</title>
-    <meta name="description" content="El-Maraei Group - A leading Egyptian business conglomerate with excellence in medical services, maritime shipping, marine construction, mining, and international trade.">
-    <meta property="og:title" content="El-Maraei Group - Leading Business Conglomerate">
+    <title>El maraie Group - Leading Business Conglomerate | المرعي جروب</title>
+    <meta name="description" content="El maraie Group - A leading Egyptian business conglomerate with excellence in medical services, maritime shipping, marine construction, mining, and international trade.">
+    <meta property="og:title" content="El maraie Group - Leading Business Conglomerate">
     <meta property="og:description" content="Excellence in medical services, maritime shipping, marine construction, mining, and international trade.">
     <meta property="og:type" content="website">
   </head>
